# sparse-agg-pyspark

./: README.md  pyproject.toml
src/: ]  report.py  report_test.py
test/: test_transform.py
