[tool.poetry]
name = "sparse-agg-pyspark"
version = "0.1.0"
description = ""
authors = ["Andrew Wong <wongwong.wong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = {extras = ["pandas-on-spark"], version = "^3.5.1"}
pandas = "<2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
